tests/snapshots/run_wpt_conformance__onnx_cos_float32_3D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "cos.https.any.js",
    "cos float32 3D tensor",
    "onnx",
    "PASS",
)
