tests/snapshots/run_wpt_conformance__onnx_cumulativeSum_with_float32_input_and_set_exclusive_to_true_.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "cumulative_sum.https.any.js",
    "cumulativeSum with float32 input and set exclusive to true.",
    "onnx",
    "PASS",
)
